--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,49 @@
-== Blank Project [template]
+= README
+:doctype: article
+:repository-url: https://github.com/dro-id/blank-template
+:!showtitle:
+:icons: font
+:imagesdir: docs/assets/img
+:hardbreaks-option:
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
 
-*_This repository contains a base, stack agnostic, template to kickstart new projects_*
+// Standard shields and technology skills
+https://github.com/dro-id/blank-template/graphs/contributors[image:https://img.shields.io/github/contributors/dro-id/blank-template.png?style=for-the-badge[https://img.shields.io/github/contributors/dro-id/blank-template]] https://github.com/dro-id/blank-template/network/members[image:https://img.shields.io/github/forks/dro-id/blank-template.svg?style=for-the-badge[https://img.shields.io/github/forks/dro-id/blank-template]] https://github.com/dro-id/blank-template/stargazers[image:https://img.shields.io/github/stars/dro-id/blank-template.svg?style=for-the-badge[https://img.shields.io/github/stars/dro-id/blank-template]] https://github.com/dro-id/blank-template/issues[image:https://img.shields.io/github/issues/dro-id/blank-template.svg?style=for-the-badge[https://img.shields.io/github/issues/dro-id/blank-template]] https://github.com/dro-id/blank-template/blob/master/LICENSE.txt[image:https://img.shields.io/github/license/dro-id/blank-template.svg?style=for-the-badge[https://img.shields.io/github/license/dro-id/blank-template]] http://www.rust-lang.org[image:https://img.shields.io/badge/-Rust-orange.svg?style=for-the-badge&logo=rust[https://img.shields.io/badge/-Rust-orange]]
 
--> Purpose and rational behind the repository
+// Header
 
-https://codespaces.new/dro-id/blank-template?quickstart=1[image:https://github.com/codespaces/badge.svg[Open in GitHub Codespaces, align=center]]
+++++
+<div style="text-align: center"  align="center">
+	<a href="https://github.com/dro-id/blank-template">
+	    <img src="https://i.imgur.com/XZhTk1hl.png" alt="Logo" width="440" height="220">
+	</a>
+	<h1>Blank Project [template]</h1>
+	<p style="text-align: center"  align="center">
+		<i>A blank repository template to kickstart a new awesome project!</i>
+		<br><br>
+    <a href="https://codespaces.new/dro-id/blank-template?quickstart=1"><img src="https://github.com/codespaces/badge.svg" alt="Open in GitHub Codespaces"></a>
+		<br>
+	</p>
+</div>
+++++
+
+// Content
+
+[TIP]
+====
+This repository contains a base, stack agnostic, template to kickstart new projects.
+- Set of *repository special files* in the / root and docs directory to materialize project governance
+- *Codespace ready* with a .devcontainer and the actual environment defined with devenv
+- Base *GitHub Actions workflow* ready to be adapted for a target stack
+====
+
+=== About
+
+Purpose and rational behind the repository
 
 === Features
 
@@ -30,14 +69,14 @@ https://codespaces.new/dro-id/blank-template?quickstart=1[image:https://github.c
   code here
 ----
 
-=== Guidelines // Get Started
+=== Getting Started
 
-. Check 1
-. Check 2
+. Step 1
+. Step 2
 
 === Contributing
 
-Feel free to suggest improvments to the template! 
+Feel free to suggest improvements to the template! 
 
 === Acknowledgements
 
