--- a/README.adoc
+++ b/README.adoc
@@ -16,25 +16,13 @@
 ++++
 <div style="text-align: center"  align="center">
   <!-- Repository statistics-->
-  <a href="https://github.com/dro-id/blank-template/graphs/contributors">
-  	<img src="https://img.shields.io/github/contributors/dro-id/blank-template.png?style=for-the-badge" alt="https://img.shields.io/github/contributors/dro-id/blank-template">
-  </a>
-  <a href="https://github.com/dro-id/blank-template/network/members">
-  	<img src="https://img.shields.io/github/forks/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/forks/dro-id/blank-template">
-  </a>
-  <a href="https://github.com/dro-id/blank-template/stargazers">
-  	<img src="https://img.shields.io/github/stars/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/stars/dro-id/blank-template">
-  </a>
-  <a href="https://github.com/dro-id/blank-template/issues">
-  	<img src="https://img.shields.io/github/issues/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/issues/dro-id/blank-template">
-  </a>
-  <a href="https://github.com/dro-id/blank-template/blob/master/LICENSE.txt">
-  	<img src="https://img.shields.io/github/license/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/license/dro-id/blank-template">
-  </a>
+  <a href="https://github.com/dro-id/blank-template/graphs/contributors"><img src="https://img.shields.io/github/contributors/dro-id/blank-template.png?style=for-the-badge" alt="https://img.shields.io/github/contributors/dro-id/blank-template"></a>
+  <a href="https://github.com/dro-id/blank-template/network/members"><img src="https://img.shields.io/github/forks/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/forks/dro-id/blank-template"></a>
+  <a href="https://github.com/dro-id/blank-template/stargazers"><img src="https://img.shields.io/github/stars/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/stars/dro-id/blank-template"></a>
+  <a href="https://github.com/dro-id/blank-template/issues"><img src="https://img.shields.io/github/issues/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/issues/dro-id/blank-template"></a>
+  <a href="https://github.com/dro-id/blank-template/blob/master/LICENSE.txt"><img src="https://img.shields.io/github/license/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/license/dro-id/blank-template"></a>
   <!-- Main Technologies -->
-  <a href="https://en.wikipedia.org/wiki/Technology">
-  	<img src="https://img.shields.io/badge/-Technology-grey.svg?style=for-the-badge&logo=semantic-release" alt="https://img.shields.io/badge/-Technology-grey">
-  </a>
+  <a href="https://en.wikipedia.org/wiki/Technology"><img src="https://img.shields.io/badge/-Technology-grey.svg?style=for-the-badge&logo=semantic-release" alt="https://img.shields.io/badge/-Technology-grey"></a>
 </div>
 <br>
 ++++
