--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@
   <a href="https://github.com/dro-id/blank-template/network/members"><img src="https://img.shields.io/github/forks/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/forks/dro-id/blank-template"></a>
   <a href="https://github.com/dro-id/blank-template/stargazers"><img src="https://img.shields.io/github/stars/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/stars/dro-id/blank-template"></a>
   <a href="https://github.com/dro-id/blank-template/issues"><img src="https://img.shields.io/github/issues/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/issues/dro-id/blank-template"></a>
-  <a href="https://github.com/dro-id/blank-template/blob/master/LICENSE.txt"><img src="https://img.shields.io/github/license/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/license/dro-id/blank-template"></a>
+  <a href="https://github.com/dro-id/blank-template/blob/master/LICENSE"><img src="https://img.shields.io/github/license/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/license/dro-id/blank-template"></a>
   <!-- Main Technologies -->
   <a href="https://en.wikipedia.org/wiki/Technology"><img src="https://img.shields.io/badge/-Technology-grey.svg?style=for-the-badge&logo=semantic-release" alt="https://img.shields.io/badge/-Technology-grey"></a>
 </div>
