--- a/README.adoc
+++ b/README.adoc
@@ -17,11 +17,11 @@
 ++++
 <div style="text-align: center"  align="center">
   <!-- Repository statistics-->
-  <a href="https://github.com/dro-id/blank-template/graphs/contributors"><img src="https://img.shields.io/github/contributors/dro-id/blank-template.png?style=for-the-badge" alt="https://img.shields.io/github/contributors/dro-id/blank-template"></a>
-  <a href="https://github.com/dro-id/blank-template/network/members"><img src="https://img.shields.io/github/forks/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/forks/dro-id/blank-template"></a>
-  <a href="https://github.com/dro-id/blank-template/stargazers"><img src="https://img.shields.io/github/stars/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/stars/dro-id/blank-template"></a>
-  <a href="https://github.com/dro-id/blank-template/issues"><img src="https://img.shields.io/github/issues/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/issues/dro-id/blank-template"></a>
-  <a href="https://github.com/dro-id/blank-template/blob/master/LICENSE"><img src="https://img.shields.io/github/license/dro-id/blank-template.svg?style=for-the-badge" alt="https://img.shields.io/github/license/dro-id/blank-template"></a>
+  <a href="https://github.com/dro-id/blank-workspace/graphs/contributors"><img src="https://img.shields.io/github/contributors/dro-id/blank-workspace.png?style=for-the-badge" alt="https://img.shields.io/github/contributors/dro-id/blank-workspace"></a>
+  <a href="https://github.com/dro-id/blank-workspace/network/members"><img src="https://img.shields.io/github/forks/dro-id/blank-workspace.svg?style=for-the-badge" alt="https://img.shields.io/github/forks/dro-id/blank-workspace"></a>
+  <a href="https://github.com/dro-id/blank-worrkspce/stargazers"><img src="https://img.shields.io/github/stars/dro-id/blank-workspace.svg?style=for-the-badge" alt="https://img.shields.io/github/stars/dro-id/blank-workspace"></a>
+  <a href="https://github.com/dro-id/blank-worksapce/issues"><img src="https://img.shields.io/github/issues/dro-id/blank-workspace.svg?style=for-the-badge" alt="https://img.shields.io/github/issues/dro-id/blank-workspace"></a>
+  <a href="https://github.com/dro-id/blank-workspace/blob/master/LICENSE"><img src="https://img.shields.io/github/license/dro-id/blank-workspace.svg?style=for-the-badge" alt="https://img.shields.io/github/license/dro-id/blank-workspace"></a>
   <!-- Main Technologies -->
   <a href="https://en.wikipedia.org/wiki/Technology"><img src="https://img.shields.io/badge/-Technology-grey.svg?style=for-the-badge&logo=semantic-release" alt="https://img.shields.io/badge/-Technology-grey"></a>
 </div>
@@ -38,9 +38,9 @@
 ░░░░▀░░▀░▀░░▀░░▀▀▀░░░░░░▀░░▀▀▀░▀░▀░▀░░░▀▀▀░▀░▀░░▀░░▀▀▀░░░░</pre>
 	<h1>Blank Project [template]</h1>
 	<p style="text-align: center"  align="center">
-		<i><b>A blank repository template to kickstart a new awesome project!</b></i>
+		<i><b>A blank workspace template to kickstart a new awesome stacks and projects!</b></i>
 		<br><br>
-    <a href="https://codespaces.new/dro-id/blank-template?quickstart=1"><img src="https://github.com/codespaces/badge.svg" alt="Open in GitHub Codespaces"></a>
+    <a href="https://codespaces.new/dro-id/blank-workspace?quickstart=1"><img src="https://github.com/codespaces/badge.svg" alt="Open in GitHub Codespaces"></a>
 		<br>
 	</p>
 </div>
@@ -57,7 +57,7 @@ This repository contains a base, stack agnostic, template to kickstart new proje
 - EditorConfig base configuration to standardise some editor settings across devs
 - (Optional) Set of *repository special files* in the / root and docs directory to materialize project governance.
 
-__ -> Just adapt / remove the things you do not need!__ 
+__ -> Just adapt / remove the things you do not need!__
 ====
 
 === About
@@ -102,7 +102,7 @@ Purpose and rational behind the repository
 * Reference link:./docs/CODE_OF_CONDUCT.adoc[CODE_OF_CONDUCT] to unclutter the README if you have community.
 ====
 
-Feel free to suggest improvements to the template! 
+Feel free to suggest improvements to the template!
 
 === Acknowledgements
 
